--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -6,9 +6,14 @@ icon: Album
 
 ## What is Random UI?
 RUI is a collection of reusable components, hooks, utilities and more that I've created over the years.
-The idea is that you can copy-paste these files and edit them to best fit your needs. 
 
-I'll add stuff periodically, based on what I create useful and reusable.
+## Philosophy
+This idea of this project is to deliver minimal but powerful components, hooks, utilities that can be simply copied and pasted into any project.
+I'm mainly focused on building robust, standardized and accessible components, still keeping them lightweight and easy to understand.
+- All the components are built using less dependencies as possible, to don't bloat the bundle size and your package.json. This also gives you more flexibility over the component.
+- Almost all the components are built using Tailwindcss, to give you more flexibility over the styling.
+- TypeScript, not JavaScript. This gives you type safety and better readability.
+- Accessibility: Every component is built with accessibility in mind, to be compliant.
 
 
 ## Guidelines
