refactor: handled response improvements

--- a/content/docs/utilities/handled-response.mdx
+++ b/content/docs/utilities/handled-response.mdx
@@ -21,19 +21,21 @@ Copy and paste the following code into your project.
 ```ts title="lib/handled-response.ts"
 export type HandledResponse<D, E = D> =
   | {
-      data: D;
-      error?: never;
+      readonly data: D;
+      readonly error: never;
     }
   | {
-      data?: never;
-      error?: E;
+      readonly data: never;
+      readonly error: E;
     };
 
 export const ok = <D, E = D>(data: D): HandledResponse<D, E> => ({
   data,
+  error: undefined as never,
 });
 
 export const err = <D, E = D>(error: E): HandledResponse<D, E> => ({
+  data: undefined as never,
   error,
 });
 ```
